  July 19, 2006 Fix error in newGui.tcl. When used with scaler processing,
                RunNumber could be >Unknown< when formatting the status
                line.
  July 28, 2006 Fix error in wysiwyg printing  for zoomed displays.
  July 31, 2006 Fix off by one error in scaling.cc - for small scale ranges,
                and small channel values, the channel height was visibly
                lower than the corresponding tick mark.
  August 8, 2006 Enhancement 194 - increase precision in output of 
                 integrations.
  August 15,2006 Enhancement 205 - Limited the length of the attach spec on the
                GUI status line to at most 50 chars with the middle ones
                replaced by ...  this prevents the window from becoming
                >very large< for e.g. cluster file analysis.
  August 16, 2006 Do performance tuning of browser.tcl for 64 bit system.
	        on those systems, treeview find is terribly slow.
  August 29, 2006 Added setResult functions to CTCLInterpreter to factor
               object based result setting into one spot.
  September 7, 2006 Added support for super-events with 
                CAnalyzer::entityNotDone() function.
  Sept 8, 2006b Related to the above, allow event processors to indicate that
                0 bytes of the event were processed if the event was not complete.
  Sept 27,2006  Added code to support multiply incremented 2-d sum spectra.
  Oct. 03, 2006 Gui: Add preferences control panel with ~/.SpecTclDefaults
                save file.  Use this to default the length of 2-d spectrum
                axes.
  Oct 03, 2006 Gui: Prevent status lines from expanding in height.
  Oct 04, 2006 rwio package - added permissions letter to the cvs and
               to the distro.

  Oct 05, 2006 Xamine- add support for entering fitlines.
  Oct 09, 2006 GUI - Bugzilla 207 - Increase the sophistication used
               by SpecTcl's gui to located spectcldaq.