@@ -15,6 +15,218 @@
 #
 
 package provide guistate 1.0
+package require Tk
+package require Iwidgets
+package require snit
+
+
+
+#  Snidget to prompt for a save file.
+#  This is intended to deal with enhancement request 208:
+#  That request asks that selective saves be allowed .. that is 
+#  saves where one can determine which sorts of items are written to the
+#  save file.
+#
+#  Layout of the widget is:
+#    +-----------------------------------------------------+
+#    | Select Categories to write to file:                 |
+#    | [ ] Tree Parameters       [ ] Pseudo parameters     |
+#    | [ ] Tree Variables        [ ] Spectrum Definitions  |
+#    | [ ] Gate Definitions      [ ] Gate Applications     |
+#    | [ ] Filter definitions                              |
+#    +-----------------------------------------------------+
+#    | Select output file:                                 |
+#    | +--------------------------------------------+      |
+#    | | IWidgets file chooser dialog               |      |
+#    | | filter initially set to .tcl               |      |
+#    | +--------------------------------------------+      |
+#    +-----------------------------------------------------+
+#    | [ Ok   ]    [ Cancel ]    [  Help ]                 |
+#    +-----------------------------------------------------+
+#
+# Options:
+#     Name          Type      What
+#    -treeparams    bool      If set, tree parameter definitions get saved.
+#    -pseudoparams  bool      If set, pseudo parameter definitions are saved.
+#    -treevariables bool      If set the tree variable definitions get saved.
+#    -spectrumdefs  bool      If set spectrum definitions get saved.
+#    -gatedefs      bool      If set, gate definitions should be saved.
+#    -gateapps      bool      If set, gate applications should be saved.
+#    -filters       bool      If set, filers definitions will be saved.
+#
+#    -filename      string    The filename selected.
+#    
+#    -okcommand    script     Called from ok button click.
+#    -cancelcommand script    Called from cancel button click.
+#    -helpcommand  script     Called from help button click.
+#
+# Methods:
+#   modal                      Makes the dialog modal until it is destroyed.
+#
+snit::widget saveDefPrompt {
+    hulltype toplevel
+
+    # The save options are all initially set.
+
+    option   -treeparams    1
+    option   -pseudoparams  1
+    option   -treevariables 1
+    option   -spectrumdefs  1
+    option   -gatedefs      1
+    option   -gateapps       1
+    option   -filters       1
+
+    option   -filename
+
+    #  The scripts are all initially blank.
+
+    option   -okcommand     {}
+    option   -cancelcommand {}
+    option   -helpcommand   {}
+
+
+    variable hidden        {}
+
+    constructor args {
+	$self configurelist $args
+
+	#   The widget will use 3 frames stacked vertically.
+	#   That's in order to get us the bordering.
+
+	set optframe  [frame $win.optframe   -borderwidth 3 -relief groove]
+	set fileframe [frame $win.fileframe  -borderwidth 3 -relief groove]
+	set action    [frame $win.action     -borderwidth 3 -relief groove]
+
+
+
+	#  Set up the checkbuttons in the top frame (options).  We will
+	#  grid them sticky west to ensure the boxes all line up.
+	#
+	label       $optframe.title -text {Select categories to write to file}
+	checkbutton $optframe.tp \
+	    -variable ${selfns}::options(-treeparams) \
+	    -text {Tree Parameters}
+	checkbutton $optframe.pseudo \
+	    -variable ${selfns}::options(-pseudoparams) \
+	    -text {Pseudo Parameters}
+	checkbutton $optframe.tv \
+	    -variable ${selfns}::options(-treevariables) \
+	    -text {Tree Variables} 
+	checkbutton $optframe.spectra \
+	    -variable ${selfns}::options(-spectrumdefs) \
+	    -text {Spectrum Definitions}
+	checkbutton $optframe.gatedefs \
+	    -variable ${selfns}::options(-gatedefs) \
+	    -text {Gate Definitions}
+	checkbutton $optframe.gateapps \
+	    -variable ${selfns}::options(-gateapps) \
+	    -text {Gate Applications}
+	checkbutton $optframe.filter \
+	    -variable ${selfns}::options(-filters) \
+	    -text {Filter Definitions}
+
+	grid $optframe.title    -columnspan 2      -sticky w
+	grid $optframe.tp       $optframe.pseudo   -sticky w
+	grid $optframe.tv       $optframe.spectra  -sticky w
+	grid $optframe.gatedefs $optframe.gateapps -sticky w
+	grid $optframe.filter                      -sticky w
+
+	# The middle frame only has an Iwidgets file choice widget.
+	# and a title.
+
+	label $fileframe.title -text {Save to which file?}
+	iwidgets::fileselectionbox $fileframe.fs   \
+	    -directory .                           \
+	    -mask     *.tcl
+	grid $fileframe.title -sticky w
+	grid $fileframe.fs    -sticky ewns
+
+	# The bottom frame has the action buttons:
+
+	button $action.ok      -text Ok     -command [mymethod onOk]
+	button $action.cancel  -text Cancel -command [mymethod onCancel]
+	button $action.help    -text Help   -command [mymethod onHelp]
+	
+	pack $action.ok $action.cancel $action.help -side left
+
+
+	# Now arrange the frames:
+
+	grid $optframe    -sticky ewn
+	grid $fileframe   -sticky nsew
+	grid $action      -sticky ews
+
+
+    }
+    # 'public' methods:
+
+
+    # modal - Make the dialog application modal.  Modality persists
+    #         until either x, ok or cancel are clicked.
+    #
+    method modal {} {
+	if {$hidden eq "" } {;		# Modality does not nest.
+	    set hidden [frame $win.hidden]
+	    wm deiconify $win
+	    focus $win
+	    grab $win
+	    tkwait window $hidden
+	    grab release $win
+	}
+    }
+    # Configuration management:
+
+
+    # -filename:
+
+    onconfigure -filename path {
+	setEntry $win.fileframe.fs.selection $path
+	set dir [file dirname $path]
+	set filter [file join $dirname *.tcl]
+	setEntry $win.fileframe.fs.filter $filter
+
+    }
+
+    oncget -filename {
+	return [$win.fileframe.fs get]
+    }
+
+    #  Internal methods 
+
+    # Ok click.. dispatch and destroy hidden if it exists.
+    #
+    method onOk {} {
+	if {$hidden ne ""} {
+	    destroy $hidden
+	    set hidden ""
+	}
+	$self Dispatch -okcommand
+
+    }
+    # Cancel click.
+
+    method onCancel {} {
+	if {$hidden ne ""} {
+	    destroy $hidden
+	    set hidden ""
+	}
+	$self Dispatch -cancelcommand
+    }
+    # Help clicked - does not affect modality...
+
+    method onHelp {} {
+	$self Dispatch -helpcommand
+    }
+
+    #  Dispatch a user script:
+
+    method Dispatch option {
+	set script $options($option)
+	if {$script ne ""} {
+	    eval $script
+	}
+    }
+}
 
 
 #
@@ -375,10 +587,59 @@ proc writeAll fd {
     writeGateApplications    $fd
     writeFilters             $fd
 }
+
+#
+#  Called when the save state widget has had ok clicked.
+#  Figure out what to save and save it...
+#
+# widget is the widget that fired the ok.
+#  
+proc saveSelectedState widget {
+    set filename [$widget cget -filename]
+    set fd [open $filename w]
+    writeComments $fd
+
+    if {[$widget cget -treeparams]} {
+	writeTreeParameters $fd
+    }
+    if {[$widget cget -pseudoparams]} {
+	writePseudoParameters $fd
+    }
+    if {[$widget cget -treevariables]} {
+	writeTreeVariables $fd
+    }
+    if {[$widget cget -spectrumdefs]} {
+	writeSpectrumDefinitions $fd
+    }
+    if {[$widget cget -gatedefs]} {
+	writeGateDefinitions $fd
+    }
+    if {[$widget cget -gateapps]} {
+	writeGateApplications $fd
+    }
+    if {[$widget cget -filters]} {
+	writeFilters $fd
+    }
+
+    close $fd
+
+
+}
+
 # saveState
 #     Save the state of the system.
 #
 proc saveState {} {
+    saveDefPrompt .savedef \
+	-okcommand     [list saveSelectedState .savedef] \
+	-helpcommand   [list spectclGuiDisplayHelpTopic savestatedialog]
+    .savedef modal 
+    catch [list destroy .savedef];	# Shouldn't need this.
+
+
+
+    return
+
     set file [tk_getSaveFile -defaultextension .tcl                    \
                              -title {Save To...}                       \
                              -filetypes [list                          \
